fixed model list response